syntax = "proto3";

option go_package = "github.com/hiank/think/net/rpc/td";

message S_Example {
    string value = 1;
}

message G_Example {
    string value = 1;
}

message P_Example {
    string value = 1;
}

message TEST_Example {
    string value = 1;
}